# Project-Development-Prompt-Library

./: .deployment  .replit  azure-pipelines.yml  cookies.txt  migrate_platforms.py  prompts.db  pyproject.toml  replit.md  requirements.txt  startup.sh  staticwebapp.config.json
.github/workflows/: main-backup-branch_iom-d-we-datallmpoc-prompt-lib-02.yml  main_iom-d-we-datallmpoc-prompt-lib-01.yml
app/: __init__.py  database.py  main.py  models.py
app/routers/: admin.py  auth.py  htmx.py  public.py
app/services/: object_storage.py
app/templates/: base.html  category_subcategories.html  home.html  library.html  login.html  prompt_detail.html  submit.html
app/templates/admin/: base.html  categories.html  dashboard.html  login.html  prompt_form.html  prompts.html  review_queue.html  users.html
app/templates/partials/: categories.html  prompts.html
attached_assets/: Pasted--IOM-Prompt-Library-Replit-Build-Brief-for-Replit-developer-Goal-Build-a-production-ready--1757943353293_1757943353293.txt  Pasted-2025-09-24T17-46-11-014017362Z-Initializing-database-2025-09-24T17-46-12-109628815Z-Traceback-m-1758735945110_1758735945114.txt  Pasted-2025-09-24T18-05-28-506107195Z-Initializing-database-2025-09-24T18-05-29-588492442Z-Traceback-m-1758737117253_1758737117254.txt  Pasted-2025-09-24T18-24-36-403517629Z-App-import-error-No-module-named-app-2025-09-24T18-24-36-556856-1758738244084_1758738244085.txt
seed/: import_seed.py  prompts.db  prompts_seed.json
